--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ h3+p>strong {
   font-weight: 700;
 }
 
+p {
+  font-weight: 400;
+  font-style: normal;
+}
+
 p>code {
   display: inline-block;
   background-color: #d1def9;
