--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+body {
+  padding: 2em;
+}
+
 * {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
@@ -10,6 +14,7 @@ h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 800;
   font-size: 2.5em;
+  margin-top: 0;
 }
 
 h2 {
