--- a/style.css
+++ b/style.css
@@ -2,25 +2,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
-  padding: 2em;
+  padding: 10mm;
+  font-size: 17px;
 }
 
 * {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
+  font-size: 17px;
 }
 
 h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 800;
-  font-size: 2.5em;
+  font-size: 45px;
   margin-top: 0;
 }
 
 h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 25px;
   position: relative;
   display: inline-block;
   margin-bottom: 0;
@@ -55,7 +56,7 @@ h3+p>em {
   width: 100%;
   position: relative;
   text-align: right;
-  margin-top: -1.3em;
+  margin-top: -20px;
 }
 
 h3+p>strong {
@@ -66,16 +67,17 @@ h3+p>strong {
 p {
   font-weight: 400;
   font-style: normal;
+  font-size: 17px;
 }
 
 p>code {
-  display: inline-block;
+  display: inline-flex;
   background-color: #d1def9;
   color: #0b2762;
   font-weight: 700;
   font-family: 'Open Sans', sans-serif;
-  padding: 0.1em 0.4em;
-  margin-top: 0.3em;
+  padding: 1px 5px;
+  line-height: 17px;
 }
 
 .contact-info>ul {
